# The-Auto-Cooler-Closed-Loop-System

./: BIT_MATH.h  CMakeLists.txt  README.md  STD_TYPES.h  main.c
Adc/: Adc.c  Adc.h  Adc_Private.h
GPIO/: GPIO.c  GPIO.h  GPIO_PRIVATE.h
Lcd/: Lcd.c  Lcd.h
Nvic/: Nvic.c  Nvic.h
RCC/: RCC.c  RCC.h  RCC_PRIVATE.h
StateMachine/: StateMachine.c  StateMachine.h
Timer/: Timer.c  Timer.h  Timer_Private.h
